--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set(SRCS_DUTILS
   DUtils/Random.cpp
   DUtils/Timestamp.cpp)
 
-find_package(OpenCV 4 QUIET)
+find_package(OpenCV EXACT 4.2.0 QUIET)
 # if(NOT OpenCV_FOUND)
 #    find_package(OpenCV 3.0 QUIET) 
 #    if(NOT OpenCV_FOUND)
